# flowbuild-rust

./: Cargo.toml  docker-compose.yaml
engine/: .env  Cargo.toml
engine/migrations/2022-03-23-042714_base_setup/: down.sql  up.sql
engine/src/: lib.rs  schema.rs
engine/src/cockpit/: mod.rs
engine/src/core/: engine.rs  mod.rs  threadpool.rs
engine/src/core/persistors/: activity_manager.rs  blueprint.rs  mod.rs  process.rs  process_state.rs  provider.rs  workflow.rs
engine/src/core/runtime/: activity_manager.rs  mod.rs  process.rs  process_state.rs  workflow.rs
engine/src/core/runtime/blueprint/: blueprint_spec.rs  mod.rs
engine/src/core/runtime/nodes/: mod.rs  node.rs
engine/src/core/workflow/: activity_manager.rs  blueprint_spec.rs  mod.rs  operators.rs  process.rs  process_state.rs  workfllow.rs  workflow.rs
engine/src/core/workflow/nodes/: node.rs
engine/src/models/: workflow.rs
engine/src/nodes/: node.rs
exemples/: Cargo.toml  blueprint.json  hello.rs  process.rs  serialize.rs  spread_self.rs
node-bind/: Cargo.toml  engine.linux-x64-gnu.node  hello.js  index.js  package-lock.json  package.json
node-bind/.github/workflows/: CI.yml
node-bind/npm/android-arm64/: README.md  package.json
node-bind/npm/darwin-arm64/: README.md  package.json
node-bind/npm/darwin-x64/: README.md  package.json
node-bind/npm/linux-arm-gnueabihf/: README.md  package.json
node-bind/npm/linux-arm64-gnu/: README.md  package.json
node-bind/npm/linux-x64-gnu/: README.md  package.json
node-bind/npm/linux-x64-musl/: README.md  package.json
node-bind/npm/win32-x64-msvc/: README.md  package.json
node-bind/src/: lib.rs
