[package]
name = "engine"

version = "0.0.0"
edition = "2021"
authors = ["FDTE-DSD"]
license = "MIT"
readme = "README.md"

categories = ["asynchronous", "state-machine"]
keywords = ["state-machine", "runtime", "non-blocking", "futures"]

full = []


[dependencies]
tokio = { version = "1.1.1", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
enum_derive = "0.1.7"
custom_derive = "0.1.7"
threadpool = "1.8.1"
dyn-clone = "1.0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
erased-serde = "0.3"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1.51"
js-sandbox = "0.1"
rust_lisp = "0.6"
mustache = "0.9"
diesel = { version = "1.4.8", features = ["chrono","serde_json","uuidv07","postgres","r2d2"] }
lazy_static = "1.4.0"
log = "0.4"
pretty_env_logger = "0.4"


[features]
default = ["postgres", "cockpit","mqtt"]
postgres = []
sqlite = []
mqtt = []
cockpit = []

