[package]
edition = "2018"
name = "flowbuild_engine"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "1"
napi-derive = "1"
engine = { path = "../engine", features = [], version= "0.0.0" }
uuid = { version = "0.8", features = ["serde", "v4"] }


[build-dependencies]
napi-build = "1"

[profile.release]
lto = true
